--- a/src/assets/iconfont/demo_index.html
+++ b/src/assets/iconfont/demo_index.html
@@ -15,7 +15,7 @@
 </head>
 <body>
   <div class="main">
-    <h1 class="logo"><a href="https://www.iconfont.cn/" title="iconfont 首页" target="_blank">&#xe86b;</a></h1>
+    <h1 class="logo"><a href="https://www.cn/" title="iconfont 首页" target="_blank">&#xe86b;</a></h1>
     <div class="nav-tabs">
       <ul id="tabs" class="dib-box">
         <li class="dib active"><span>Unicode</span></li>
@@ -955,7 +955,8 @@
 <pre><code class="language-css"
 >.iconfont {
   font-family: "iconfont" !important;
-  font-size: 16px;
+  <!-- 修改图标字体大小 -->
+  font-size: 14px;
   font-style: normal;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
